--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "^7.8.0",
     "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@expo/prebuild-config": "^6.7.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
-    "expo": "~50.0.14",
-    "expo-app-loading": "^2.1.1",
+    "expo": "~50.0.17",
     "expo-font": "~11.10.3",
-    "expo-splash-screen": "~0.26.4",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
     "react": "18.2.0",
@@ -30,6 +32,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-searchable-dropdown": "^1.1.3",
@@ -37,9 +40,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "typescript": "^5.3.0",
-    "unique-names-generator": "^4.7.1",
-    "react-native-reanimated": "~3.6.2",
-    "expo-linear-gradient": "~12.7.2"
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
